Linking material to grease pencil object causes crash #59648

Closed
opened 2018-12-20 01:40:52 +01:00 by Daniel Oakey · 3 comments

System Information
Operating system: Arch Linux
Graphics card: GTX 1060

Blender Version
Broken: 2.80, d46d8e831ce-linux-glibc224-x86_64

Exact steps for others to reproduce the error

  1. Delete the cube, camera, and light and create a Grease Pencil object
  2. Go to draw mode and draw a random line
  3. With the grease pencil object selected, go to the material panel and link the material to the "Object" --> Blender Crashes

I don't actually know what the intended behavior of linking the material to the grease pencil object is supposed to be. I was just screwing around when blender crashed and I was able to repeat it.

crash_demo.gif

Error Message

  find_node_operation: Failed for (MATERIAL_UPDATE, '')
  add_relation(Material -> GP Data) - Could not find op_from (OperationKey(type: SHADING, component name: '', operation code: MATERIAL_UPDATE))
  add_relation(Material -> GP Data) - Failed, but op_to (ComponentKey(GDGPencil, GEOMETRY)) was ok
  Writing: /tmp/blender.crash.txt
  Segmentation fault (core dumped)
**System Information** Operating system: Arch Linux Graphics card: GTX 1060 **Blender Version** Broken: 2.80, d46d8e831ce-linux-glibc224-x86_64 **Exact steps for others to reproduce the error** 1. Delete the cube, camera, and light and create a Grease Pencil object 2. Go to draw mode and draw a random line 3. With the grease pencil object selected, go to the material panel and link the material to the "Object" --> Blender Crashes I don't actually know what the intended behavior of linking the material to the grease pencil object is supposed to be. I was just screwing around when blender crashed and I was able to repeat it. ![crash_demo.gif](https://archive.blender.org/developer/F6011161/crash_demo.gif) **Error Message** ``` find_node_operation: Failed for (MATERIAL_UPDATE, '') add_relation(Material -> GP Data) - Could not find op_from (OperationKey(type: SHADING, component name: '', operation code: MATERIAL_UPDATE)) add_relation(Material -> GP Data) - Failed, but op_to (ComponentKey(GDGPencil, GEOMETRY)) was ok Writing: /tmp/blender.crash.txt Segmentation fault (core dumped)
Author

Added subscriber: @doakey3

Added subscriber: @doakey3
Antonio Vazquez self-assigned this 2018-12-20 17:06:14 +01:00

This issue was referenced by 545f3f1728

This issue was referenced by 545f3f1728361b31197b9d0397fcefd242d1fdad

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59648
No description provided.