Fix T59648: Linking material to greasepencil object causes crash